--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,15 +7,15 @@ ext.versions = [
         buildTools      : "30.0.2",
 
         dagger          : '2.26',
-        room            : '2.2.2',
-        appcompat       : '1.1.0',
+        room            : '2.2.5',
+        appcompat       : '1.2.0',
         lifecycle       : '2.1.0',
-        retrofit2       : '2.6.1',
+        retrofit2       : '2.9.0',
         work            : '1.0.0',
         nav             : '2.0.0',
-        coreKtx         : '1.1.0',
+        coreKtx         : '1.3.2',
         material_version: '1.2.0',
-        paging          : '2.1.0',
+        paging          : '2.1.2',
         fragment        : '1.2.0',
 
         googleServices          : '4.3.3',
@@ -25,7 +25,7 @@ ext.versions = [
         ktLint                  : '0.23.1',
 
         // Dagger
-        daggerVersion           : '2.6',
+        daggerVersion           : '2.29.1',
 
 
         gradleVersionsPlugin    : '0.13.0',
@@ -34,10 +34,10 @@ ext.versions = [
 
         // Retrofit
         gsonConverter           : '2.1.0',
-        okhttp                  : '3.12.1',
+        okhttp                  : '4.9.0',
 
 
-        gson                    : '2.7',
+        gson                    : '2.8.6',
         anotationApi            : '1.0',
 
 
@@ -46,7 +46,7 @@ ext.versions = [
         log4j                   : '1.2.17',
 
         // Junit
-        junit                   : '4.12',
+        junit                   : '4.13.1',
 
         // Mockito
         mockito                 : '2.0.2-beta',
@@ -73,7 +73,7 @@ ext.libraries = [
         // Kotlin
         kotlin                  : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
         coreKtx                 : "androidx.core:core-ktx:$versions.coreKtx",
-        coroutinesCore          : 'org.jetbrains.kotlinx:kotlinx--core:1.3.1',
+        coroutines              : 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1',
         coroutinesAndroid       : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0",
 
         // Support
@@ -88,6 +88,7 @@ ext.libraries = [
         navigation              : "androidx.navigation:navigation-ui-ktx:$versions.nav",
         room                    : "androidx.room:room-runtime:${versions.room}",
         roomKapt                : "androidx.room:room-compiler:${versions.room}",
+        roomKtx                 : "androidx.room:room-ktx:${versions.room}",
         fragment                : "androidx.fragment:fragment-ktx:$versions.fragment",
         paging                  : "androidx.paging:paging-runtime-ktx:$versions.paging",
         lifecycle               : 'androidx.lifecycle:lifecycle-extensions:2.1.0',
