--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,7 @@ ext.versions = [
         coreKtx         : '1.3.2',
         material_version: '1.2.0',
         paging          : '2.1.2',
-        fragment        : '1.2.0',
+        fragment        : '1.3.0-beta01',
 
         googleServices          : '4.3.3',
 
@@ -33,7 +33,7 @@ ext.versions = [
 
 
         // Retrofit
-        gsonConverter           : '2.1.0',
+        gsonConverter           : '2.9.0',
         okhttp                  : '4.9.0',
 
 
@@ -61,7 +61,7 @@ ext.versions = [
 
         crashlytics             : '2.10.1',
         firebaseCrashlytics     : '2.2.1',
-        firebaseCore            : '17.5.0',
+        firebaseCore            : '17.5.1',
         firebaseMessaging       : '17.5.0',
 ]
 
@@ -73,6 +73,7 @@ ext.libraries = [
         // Kotlin
         kotlin                  : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
         coreKtx                 : "androidx.core:core-ktx:$versions.coreKtx",
+        kotlinReflect           : "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin",
         coroutines              : 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1',
         coroutinesAndroid       : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0",
 
@@ -81,7 +82,9 @@ ext.libraries = [
         supportDesign           : "com.google.android.material:material:$versions.material_version",
         supportCardView         : 'androidx.cardview:cardview:1.0.0',
         constraint              : 'androidx.constraintlayout:constraintlayout:1.1.3',
-        recyclerview            :  'androidx.recyclerview:recyclerview:1.1.0',
+        recyclerview            : 'androidx.recyclerview:recyclerview:1.1.0',
+        material                : "com.google.android.material:material:${versions.material_version}",
+
 
         //jetpack
         navigationFragment      : "androidx.navigation:navigation-fragment-ktx:$versions.nav",
