--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation libraries.constraint
     implementation libraries.material
 
+    implementation      libraries.glide
+    kapt                libraries.glideKapt
+
 }
