--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,10 @@ dependencies {
 
     implementation      libraries.glide
     kapt                libraries.glideKapt
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    mavenCentral()
 }
