--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,5 +42,10 @@ dependencies {
 
     implementation      libraries.dagger
     kapt                libraries.daggerCompiler
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    mavenCentral()
 }
