sqldelight entities .sq added

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -5,6 +5,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlinx-serialization'
 apply plugin: 'com.squareup.sqldelight'
 
+
+sqldelight {
+    AppDatabase {
+        packageName = "com.martianlab.recipes.data.sources.db"
+    }
+}
+
 android {
     compileSdkVersion versions.compileSdk
     buildToolsVersion  versions.buildTools
