--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath gradlePlugins.sqldelight
+        classpath "org.koin:koin-gradle-plugin:${versions.koin}"
+
     }
 }
 
@@ -21,6 +23,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url  "https://dl.bintray.com/ekito/koin"
+        }
     }
 }
 
